--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
       "--debug"
     ]
   },
+  "engines": {
+    "node": "10.15.1"
+  },
   "devDependencies": {
     "apidoc": "^0.17.6",
     "apidoc-markdown": "^0.2.0",
