--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon -i \"*.test.js\" .",
     "debug": "nodemon --inspect .",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --watch",
-    "prod": "cross-env NODE_ENV=production nodemon -i \"*.test.js\" -r dotenv-safe/config .",
+    "prod": "cross-env NODE_ENV=production nodemon --inspect -i \"*.test.js\" -r dotenv-safe/config .",
     "lint": "eslint src",
     "docs": "apidoc -i src -o docs && apidoc-markdown -p docs -o DOCS.md",
     "postdocs": "opn docs/index.html"
