--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-status-monitor": "^1.2.7",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^5.1.0",
     "mongoose-create-unique": "^0.4.4",
