--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
+    "@sentry/node": "^5.7.1",
     "axios": "0.18.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
