--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon -i \"*.test.js\" .",
     "debug": "nodemon --inspect .",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand --watch",
-    "prod": "cross-env NODE_ENV=production nodemon --inspect -i \"*.test.js\" -r dotenv-safe/config .",
+    "prod": "cross-env NODE_ENV=production nodemon -i \"*.test.js\" -r dotenv-safe/config .",
     "lint": "eslint src",
     "docs": "apidoc -i src -o docs && apidoc-markdown -p docs -o DOCS.md",
     "postdocs": "opn docs/index.html"
@@ -81,6 +81,7 @@
     "querymen": "^2.1.3",
     "rand-token": "^0.4.0",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "waait": "^1.0.5"
   }
 }
